[refactor] DTO 사용함으로써 View 로직 분리